<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">

    <data>
        <import type="android.view.View"/>
        <variable name="question" type="com.softf.vocacional.model.Question"/>
        <variable name="onQuestionClickedListener"
                  type="com.softf.vocacional.ui.test.TestAdapter.OnQuestionsClickedListener"/>
    </data>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="6dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:foreground="?attr/selectableItemBackground">

            <TextView
                    android:id="@+id/testCardQuestionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{question.question}"
                    android:textColor="@color/long_text_color"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/moreInfoButtonTextView"
                    tools:text="@string/common_error"/>

            <TextView
                    android:id="@+id/testCardQuestionButtonYes"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:background="@drawable/transparent_rect_filled"
                    android:text="@string/question_list_yes_button"
                    android:layout_marginStart="16dp"
                    android:onClick="@{() -> onQuestionClickedListener.onQuestionClickedListener(question, 1)}"
                    android:layout_marginBottom="16dp"
                    app:setColorYes="@{question.response}"
                    app:responded="@{question.isResponded}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/question_list_yes_button"/>

            <TextView
                    android:id="@+id/testCardQuestionButtonNo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:background="@drawable/transparent_rect_filled"
                    android:text="@string/question_list_no_button"
                    android:onClick="@{() -> onQuestionClickedListener.onQuestionClickedListener(question, 0)}"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:setColorNo="@{question.response}"
                    app:responded="@{question.isResponded}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>