<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">

    <data>
        <import type="android.view.View"/>
        <variable name="product" type="com.softf.vocacional.model.Product"/>
        <variable name="onProductsClickedListener"
                  type="com.softf.vocacional.ui.products.ProductsAdapter.OnProductsClickedListener"/>
    </data>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="6dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@color/white"
                android:foreground="?attr/selectableItemBackground">

            <ImageView
                    android:id="@+id/imageProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:imageUrl="@{product.image}"
                    app:defaultImage="@{product.defaultImage}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/test1"/>

            <TextView
                    android:id="@+id/stateTextView"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@drawable/blue_rect_filled"
                    app:requestState="@{product.tittle}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageProduct"
                    tools:text="@string/open"/>

            <TextView
                    android:id="@+id/moreInfoButtonTextView"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:background="@drawable/transparent_rect_filled"
                    android:text="@string/more_info"
                    app:layout_constraintTop_toBottomOf="@+id/stateTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    tools:text="@string/more_info"
                    app:layout_constraintBottom_toTopOf="@+id/runTestButtonTextView"
                    android:onClick="@{() -> onProductsClickedListener.onProductsClicked(product, 0)}"/>

            <TextView
                    android:id="@+id/runTestButtonTextView"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:background="@drawable/transparent_rect_filled"
                    android:text="@string/run_test"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/moreInfoButtonTextView"
                    tools:text="@string/run_test"
                    android:onClick="@{() -> onProductsClickedListener.onProductsClicked(product, 1)}"/>

            <TextView
                    android:id="@+id/resultButtonProducts"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_margin="3dp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:background="@drawable/transparent_rect_filled"
                    android:text="@string/result"
                    android:onClick="@{() -> onProductsClickedListener.onProductsClicked(product, 2)}"
                    android:visibility="@{product.free ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@+id/runTestButtonTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/result"/>
            <ImageView
                    android:id="@+id/productsIconCardType"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="4dp"
                    app:isFree="@{product.free}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/free"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>