<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <data>

        <import type="android.view.View" />

        <variable
            name="result"
            type="com.softf.vocacional.model.Result" />

        <variable
            name="onResultsClickedListener"
            type="com.softf.vocacional.ui.result.ResultsAdapter.OnResultsClickedListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <ImageView
                    android:id="@+id/imageResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="center"
                    android:layout_marginTop="8dp"
                    app:imageResult="@{result.image}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stateTextView"
                    tools:src="@drawable/ad"/>

            <TextView
                    android:id="@+id/stateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/tittles"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:requestState="@{result.textImportanceResult}"
                    tools:text="@string/open"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/rateTest"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/transparent_rect_filled"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="@dimen/buttons"
                    android:onClick="@{() -> onResultsClickedListener.onResultsRate(result)}"
                    android:text="@string/rate_test"
                    android:textColor="@color/blue"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/shareResult"
                    app:layout_constraintTop_toBottomOf="@+id/imageResult"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="@string/rate_test"
                    />

            <TextView
                    android:id="@+id/shareResult"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/transparent_rect_filled"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="@dimen/buttons"
                    android:onClick="@{() -> onResultsClickedListener.onResultsShare(result)}"
                    android:text="@string/share_result"
                    android:textColor="@color/blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.501"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/share_result" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintTop_toBottomOf="@+id/imageResult"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>